--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <li><a href="http://cl.giit.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://give.ga/" target="_blank">精品福利</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
-<li><a href="http://fl47.co/?fromuid=5495" target="_blank">福利社区</a></li>
+<li><a href="http://fl47.net/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77827.com/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://174.127.195.198/bbs/index.php" target="_blank">色中色</a></li>
@@ -62,7 +62,7 @@
 <li><a href="http://www.gaohaolu.com/" target="_blank">高好撸</a></li>
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP论坛</a></li>
 <li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
-<li><a href="http://www.xinghao.ml/?fromuid=18" target="_blank">性好论坛</a></li>
+<li><a href="http://xinghao.mobi/?fromuid=18" target="_blank">性好论坛</a></li>
 <li><a href="http://www.hong07.com/" target="_blank">红秀资源网</a></li>
 <li><a href="http://xisezi.tech/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
@@ -71,12 +71,12 @@
 <li><a href="http://www.aipapa88.net/" target="_blank">啪啪啪88</a></li>
 <li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
-<li><a href="http://www.99hdgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
+<li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://107.180.71.83/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
 <li><a href="http://cfukt.xyz/" target="_blank">CFUKT</a></li>
-<li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
+<li><a href="http://7wo.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://18board.com/forum/" target="_blank">18p2p</a></li>
 <li><a href="http://www.sewangchao3.com/" target="_blank">夜色王朝</a></li>
 <li><a href="http://www.new-3lunch.net/?fromuid=441850" target="_blank">New-3Lunch</a></li>
@@ -198,7 +198,7 @@
 <li><a href="http://www.1024fuli.pw/" target="_blank">1024福利导航</a></li>
 <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
-<li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
+<li><a href="http://www.chdaohang.com/" target="_blank">痴汉导航</a></li>
 <li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
 <li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
 <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
@@ -249,7 +249,7 @@
 <li><a href="http://www.51mmm.info/" target="_blank">51妹妹在线</a></li>
 <li><a href="http://www.slzxtv.com/" target="_blank">色郎在线</a></li>
 <li><a href="http://www.yslav.com/" target="_blank">夜色撸</a></li>
-<li><a href="http://www.caobiao345.com/" target="_blank">我要操婊</a></li>
+<li><a href="http://www.caobiao789.com/" target="_blank">我要操婊</a></li>
 <li><a href="http://www.renyu88.com/" target="_blank">人鱼爸爸</a></li>
 <li><a href="http://www.94lua.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.jjavs.xyz/" target="_blank">鸡鸡在线</a></li>
@@ -264,10 +264,14 @@
 <li><a href="http://email.v2dizhi.at.gmail.com.vv9.space/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://dcshipin.com/" target="_blank">灯草视频</a></li>
-<li><a href="http://www.s1shipin.com/" target="_blank">色艺视频</a></li>
 <li><a href="http://www.pddav.com/" target="_blank">嫖老师AV</a></li>
-<li><a href="http://www.444ap.com/" target="_blank">日本AV电影</a></li>
-<li><a href="http://www.8090yule.com/" target="_blank">8090av影院</a></li>
+<li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
+<li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
+<li><a href="http://www.heixiu123.com/" target="_blank">嘿咻123</a></li>
+<li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
+<li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
+<li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
+<li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://www.tianxingseai.top/" target="_blank">甜性涩爱</a></li>
 <li><a href="http://www.sejishikong.top/" target="_blank">色即是空</a></li>
 <li><a href="http://m.dongliuvv.com/" target="_blank">东流AV影院</a></li>
@@ -277,24 +281,18 @@
 <li><a href="http://www.xinghuoban.top/" target="_blank">性伙伴电影</a></li>
 <li><a href="http://www.fulisuola.top/" target="_blank">福利电影</a></li>
 <li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
-<li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
-<li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
-<li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
+<li><a href="http://www.444ap.com/" target="_blank">日本AV电影</a></li>
 <li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
-<li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
-<li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.porn5.club/" target="_blank">Porn5视频</a></li>
-<li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
-<li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
-<li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.bbbb8.info/" target="_blank">B8视频</a></li>
-<li><a href="http://jibaxxoo.com/" target="_blank">jibaxxoo</a></li>
 <li><a href="http://www.1xs6.com/" target="_blank">久久热精品</a></li>
 <li><a href="http://www.666jjy.com/" target="_blank">涩情小电影</a></li>
 <li><a href="http://www.gogo199.com/" target="_blank">妓出阁</a></li>
-<li><a href="http://www.6666my.cn/" target="_blank">夏娃高清视频</a></li>
+<li><a href="http://www.6666my.cn/" target="_blank">夏娃视频</a></li>
+<li><a href="http://yaya6.bid/" target="_blank">丫丫视频</a></li>
+<li><a href="http://jiajia6.bid/" target="_blank">佳佳视频</a></li>
 <li><a href="http://www.smporn.xyz/" target="_blank">神魔在线</a></li>
-<li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
+<li><a href="http://sesexia.co/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.99zzf.com/" target="_blank">大香蕉网</a></li>
 <li><a href="http://591ys.top/" target="_blank">噜噜阁在线</a></li>
@@ -302,24 +300,18 @@
 <li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
-<li><a href="http://www.remeiav.com/" target="_blank">热妹AV在线</a></li>
+<li><a href="http://www.avxojb.com/" target="_blank">avxojb</a></li>
 <li><a href="http://www.woailg8.com/" target="_blank">撸管会所</a></li>
 <li><a href="http://www.kedougood.com/" target="_blank">柯兜在线</a></li>
-<li><a href="http://www.wygav.com/" target="_blank">忘忧阁</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
-<li><a href="http://www.xingaigeav.xyz/" target="_blank">性爱阁AV</a></li>
-<li><a href="http://www.dadiaoav.xyz/" target="_blank">大屌AV</a></li>
 <li><a href="http://www.taohua8.ml/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
-<li><a href="http://www.caoliu6av.com/" target="_blank">草榴6av在线</a></li>
 <li><a href="http://www.mmsao.club/" target="_blank">妹妹骚</a></li>
-<li><a href="http://www.hhl501.com/" target="_blank">狠狠撸在线</a></li>
 <li><a href="http://www.luse501.com/" target="_blank">撸撸色视频</a></li>
 <li><a href="http://www.eeey123.com/" target="_blank">88微拍福利</a></li>
 <li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
 <li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
 <li><a href="http://www.ppp166.com/" target="_blank">伦理片大全</a></li>
-<li><a href="http://www.51ganb.com/" target="_blank">官人我要</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
@@ -334,29 +326,38 @@
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
 <li><a href="http://www.wojiuyaolu.com/" target="_blank">撸撸奶</a></li>
 <li><a href="http://www.mowang.info/" target="_blank">魔王在线</a></li>
+<li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
+<li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
+<li><a href="http://www.s1shipin.com/" target="_blank">色艺视频</a></li>
+<li><a href="http://www.caoliu6av.com/" target="_blank">草榴6av在线</a></li>
+<li><a href="http://www.hhl501.com/" target="_blank">狠狠撸在线</a></li>
+<li><a href="http://www.wygav.com/" target="_blank">忘忧阁</a></li>
+<li><a href="http://www.remeiav.com/" target="_blank">热妹AV在线</a></li>
+<li><a href="http://www.dadiaoav.xyz/" target="_blank">大屌AV</a></li>
+<li><a href="http://www.xingaigeav.xyz/" target="_blank">性爱阁AV</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://hhs02.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
-<li><a href="http://www.avtb123.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.avtb345.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://www.7mav.net/" target="_blank">7M视频</a></li>
 <li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
-<li><a href="http://www.5xxx1.com/" target="_blank">5X社区</a></li>
+<li><a href="http://www.5xxx2.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.qqqqmao.com/" target="_blank">东京热</a></li>
 <li><a href="http://999ss99.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://qyl7.com/" target="_blank">青娱乐视频</a></li>
 <li><a href="http://www.boboru.com/" target="_blank">波波乳</a></li>
-<li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
+<li><a href="http://www.aotu15.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://www.qingjunlu3.com/" target="_blank">请君撸</a></li>
 <li><a href="http://www.aiqqc.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.jimohd.com/" target="_blank">寂寞草</a></li>
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
-<li><a href="http://www.vod35.com/" target="_blank">VOD视频</a></li>
+<li><a href="http://www.vod45.com/" target="_blank">VOD视频</a></li>
 <li><a href="https://www.5333dd.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.00bobo.com/" target="_blank">37pao</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
@@ -598,13 +599,9 @@
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://zfuli.wang/?fromuid=1539" target="_blank">找福利网论坛</a></li>
 <li><a href="http://www.lusir8.com/" target="_blank">撸涩吧</a></li>
-<li><a href="http://www.wg438.com/" target="_blank">超碰论坛</a></li>
 <li><a href="http://www.lufuliba.com/" target="_blank">撸福利吧</a></li>
 <li><a href="http://fltty.net/" target="_blank">福利天天有</a></li>
-<li><a href="http://www.trqcyx.com/" target="_blank">成人糗事</a></li>
-<li><a href="http://www.52flk.com/" target="_blank">52福利库</a></li>
 <li><a href="http://www.haofukua.com/" target="_blank">好浮夸</a></li>
-<li><a href="http://zhainw.com/" target="_blank">宅男网</a></li>
 <li><a href="http://meirifuli.me/" target="_blank">每日福利</a></li>
 <li><a href="https://www.sijihuisuo.club/" target="_blank">司机会所</a></li>
 <li><a href="http://www.puahome.com/" target="_blank">坏男孩</a></li>
