--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.giit.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
-<li><a href="http://give.ga/" target="_blank">精品福利</a></li>
+<li><a href="http://that.gq/" target="_blank">精品福利</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://fl47.net/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
@@ -60,7 +60,7 @@
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://girl1280.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.com/" target="_blank">高好撸</a></li>
-<li><a href="http://lu6vip.com/" target="_blank">撸6VIP论坛</a></li>
+<li><a href="http://www.lu6vip.info/" target="_blank">撸6VIP论坛</a></li>
 <li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
 <li><a href="http://xinghao.mobi/?fromuid=18" target="_blank">性好论坛</a></li>
 <li><a href="http://www.hong07.com/" target="_blank">红秀资源网</a></li>
@@ -133,7 +133,7 @@
 <li><a href="http://www.ttsebbs.net/?fromuid=344876" target="_blank">顶涩网</a></li>
 <li><a href="https://caoav.net/" target="_blank">CaoAV</a></li>
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
-<li><a href="http://www.99rebbs6.com/?fromuid=4521" target="_blank">久久热论坛</a></li>
+<li><a href="http://www.99bbs9.com/?fromuid=4521" target="_blank">久久热论坛</a></li>
 <li><a href="http://ww-youbbb.com/?fromuid=65678" target="_blank">有B吗？</a></li>
 <li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
