--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <li><a href="http://taohuabbs.net/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://cl.8qb.xyz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://cl.5ug.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
-<li><a href="http://dz.u6y.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
+<li><a href="http://cl.u6a.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
 <li><a href="http://cl.wa3.co/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://cl.eg3.bid/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 <li><a href="http://cl.yf6.win/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
@@ -236,7 +236,6 @@
 <li><a href="http://www.94lua.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.jjavs.xyz/" target="_blank">鸡鸡在线</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
-<li><a href="http://apianmi.com/" target="_blank">A片迷</a></li>
 <li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
 <li><a href="http://www.yeyeluav.info/" target="_blank">夜夜撸视频</a></li>
 <li><a href="http://www.4599.ink/" target="_blank">久久视频</a></li>
@@ -303,6 +302,7 @@
 <li><a href="http://www.smmsp.info/" target="_blank">色妹妹视频</a></li>
 <li><a href="http://www.lupian.info/" target="_blank">撸片在线</a></li>
 <li><a href="http://www.dadiaoav.xyz/" target="_blank">大屌AV</a></li>
+<li><a href="http://www.xxoo44.com/" target="_blank">JJAIBB</a></li>
 <li><a href="http://www.xingaigeav.xyz/" target="_blank">性爱阁AV</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
@@ -344,6 +344,7 @@
 <li><a href="http://www.niuniure003.com/" target="_blank">牛牛热</a></li>
 <li><a href="http://www.lupian50.com/" target="_blank">撸片迷在线</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
+<li><a href="http://www.999mm.us/" target="_blank">夜猫</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
 <li><a href="http://www.twav13.com/" target="_blank">AV中文</a></li>
 <li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
@@ -605,6 +606,7 @@
 <li><a href="http://j12lib.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
 <li><a href="http://150.95.130.82/" target="_blank">色狐狸</a></li>
+<li><a href="http://jp.notreal.cn/" target="_blank">假啪网</a></li>
 <li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
 <li><a href="http://www.yaozy.com/" target="_blank">番号大全</a></li>
 <li><a href="http://javpop.biz/" target="_blank">JAVPOP</a></li>
