--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
-<li><a href="http://cfukt.xyz/" target="_blank">CFUKT</a></li>
+<li><a href="http://cfukt.com/" target="_blank">CFUKT</a></li>
 <li><a href="http://7wo.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://14.102.250.19/forum/" target="_blank">18p2p</a></li>
 <li><a href="http://www.sewangchao2.com/" target="_blank">夜色王朝</a></li>
@@ -250,10 +250,13 @@
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.heixiu123.com/" target="_blank">嘿咻123</a></li>
+<li><a href="http://www.3446.pw/" target="_blank">爱上色视频</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
+<li><a href="http://www.d9sp.xyz/" target="_blank">D9视频</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
+<li><a href="http://www.dh445.com/" target="_blank">超碰在线视频/a></li>
 <li><a href="http://www.tianxingseai.top/" target="_blank">甜性涩爱</a></li>
 <li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
 <li><a href="http://www.repianvv.pw/" target="_blank">热片SeX大电影</a></li>
@@ -712,7 +715,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://lsjtupian.com/" target="_blank">老司机图片</a></li>
-<li><a href="http://www.caoliufan.com/" target="_blank">潮榴番</a></li>
+<li><a href="http://www.caoliufan.pro/" target="_blank">潮榴番</a></li>
 <li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
 <li><a href="http://www.meinvtu.info/" target="_blank">美女图福利</a></li>
@@ -733,6 +736,7 @@
 <li><a href="http://www.dbmeinv.com/" target="_blank">豆瓣美女</a></li>
 <li><a href="http://119.23.24.149/" target="_blank">妹子图控</a></li>
 <li><a href="http://www.baituce.com/" target="_blank">百图册</a></li>
+<li><a href="http://mm.notreal.cn/" target="_blank">幻美套图网</a></li>
 <li><a href="http://www.sousi8.cc/" target="_blank">搜丝吧</a></li>
 <li><a href="http://www.18av.com/" target="_blank">18av性感美女</a></li>
 <li><a href="http://www.guomo.link/?fromuid=130143" target="_blank">国模</a></li>
