--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
 <li><a href="http://girl1280.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.com/" target="_blank">高好撸</a></li>
 <li><a href="http://www.lu6vip.info/" target="_blank">撸6VIP论坛</a></li>
-<li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
 <li><a href="http://xinghao.mobi/?fromuid=18" target="_blank">性好论坛</a></li>
-<li><a href="http://www.hong07.com/" target="_blank">红秀资源网</a></li>
+<li><a href="http://www.xiu88.info/" target="_blank">秀秀资源网</a></li>
 <li><a href="http://xisezi.tech/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.org/" target="_blank">奇色社区</a></li>
-<li><a href="http://www.ppzy8.in/" target="_blank">啪啪资源吧</a></li>
+<li><a href="http://www.ppzy8.top/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
@@ -97,13 +96,13 @@
 <li><a href="http://theporndude.com/" target="_blank">The Porn Dude</a></li>
 <li><a href="http://namethatporn.com/" target="_blank">NameThatPorn</a></li>
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
-<li><a href="http://108.171.242.244/" target="_blank">MyHd1080</a></li>
 <li><a href="http://c2.1024mx.net/pw/" target="_blank">1024核工厂</a></li>
 <li><a href="http://www.51youba.cc/?fromuid=1577" target="_blank">老司机论坛</a></li>
 <li><a href="http://redditlist.com/nsfw" target="_blank">redditlist</a></li>
 <li><a href="http://45.32.51.95/?fromuid=2571826" target="_blank">捷克论坛</a></li>
 <li><a href="http://tiantangse.com/?fromuid=24994" target="_blank">涩天堂</a></li>
 <li><a href="http://www.myforum.com.hk/discuz/?fromuid=854827" target="_blank">My Forum</a></li>
+<li><a href="http://www.lsj1080.cc/" target="_blank">MYHD1080</a></li>
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
 <li><a href="http://bbs.gogo.la/" target="_blank">高高啦討論區</a></li>
 <li><a href="https://fastzone.org/?fromuid=99373" target="_blank">無限討論區</a></li>
@@ -120,6 +119,7 @@
 <li><a href="http://www.740547610.com/" target="_blank">宅男福利</a></li>
 <li><a href="http://www.yezubuluo.com/?454135" target="_blank">椰族部落</a></li>
 <li><a href="http://serendang.us/bbs/?fromuid=1216166" target="_blank">涩人党之性吧</a></li>
+<li><a href="https://wuso.me/?fromuid=10995" target="_blank">屋受論壇</a></li>
 <li><a href="http://192.161.172.140/?fromuid=679071" target="_blank">御花王朝</a></li>
 <li><a href="http://www.ttsebbs.net/?fromuid=344876" target="_blank">顶涩网</a></li>
 <li><a href="https://caoav.net/" target="_blank">CaoAV</a></li>
@@ -157,16 +157,13 @@
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
 <li><a href="http://fulidh.gq/" target="_blank">柠檬导航</a></li> 
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
-<li><a href="http://www.1080dh.com/" target="_blank">1080导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
-<li><a href="http://www.78links.com/" target="_blank">78导航</a></li>
 <li><a href="http://www.lansedh.ml/" target="_blank">蓝色导航3.0</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
 <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
 <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
 <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
 <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
-<li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
 <li><a href="http://1253.cf/" target="_blank">A天堂导航</a></li>
 <li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
 <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
@@ -174,7 +171,7 @@
 <li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
-<li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
+<li><a href="http://74fuli.org/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://kanse.ml/" target="_blank">辣椒导航</a></li>
 <li><a href="http://www.beegooddh.com/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
@@ -182,9 +179,6 @@
 <li><a href="http://www.semmdh.info/" target="_blank">色妹妹导航</a></li>
 <li><a href="http://lvjiabai1.info/" target="_blank">绿桃K导航</a></li>
 <li><a href="http://www.pigutu.pw/" target="_blank">第一福利导航</a></li>
-<li><a href="http://www.caoporn5.info/" target="_blank">超碰福利导航</a></li>
-<li><a href="http://www.meiniang.pw/" target="_blank">媚娘福利导航</a></li>
-<li><a href="http://www.1024fuli.pw/" target="_blank">1024福利导航</a></li>
 <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
 <li><a href="http://www.chdaohang.com/" target="_blank">痴汉导航</a></li>
@@ -199,7 +193,6 @@
 <li><a href="http://www.fulisao.info/" target="_blank">福利嫂宅男导航</a></li>
 <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
 <li><a href="http://www.cangjigedh.info/" target="_blank">藏姬阁导航</a></li>
-<li><a href="http://91xfdh.com/" target="_blank">91性福导航</a></li>
 <li><a href="http://www.dagongji.me/" target="_blank">大公鸡导航网</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
@@ -215,18 +208,15 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.linjiajiejie.top/" target="_blank">邻家姐姐</a></li>
-<li><a href="http://www.dushewang.top/" target="_blank">毒蛇AV影院</a></li>
-<li><a href="http://www.boduoyejieyi.pw/" target="_blank">波多野结衣电影</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
+<li><a href="http://www.msh.one/" target="_blank">陌上花</a></li>
 <li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
-<li><a href="http://www.msh.one/" target="_blank">陌上花</a></li>
 <li><a href="http://www.51mmm.info/" target="_blank">51妹妹在线</a></li>
 <li><a href="http://www.slzxav.com/" target="_blank">色郎在线</a></li>
-<li><a href="http://www.yslav.com/" target="_blank">夜色撸</a></li>
+<li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
@@ -237,7 +227,6 @@
 <li><a href="http://www.renyu888.com/" target="_blank">人鱼爸爸</a></li>
 <li><a href="http://www.94lua.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.jjavs.xyz/" target="_blank">鸡鸡在线</a></li>
-<li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
 <li><a href="http://www.yeyeluav.info/" target="_blank">夜夜撸视频</a></li>
 <li><a href="http://www.4599.ink/" target="_blank">久久视频</a></li>
@@ -246,16 +235,12 @@
 <li><a href="http://www.heixiu123.com/" target="_blank">嘿咻123</a></li>
 <li><a href="http://www.3446.pw/" target="_blank">爱上色视频</a></li>
 <li><a href="http://www.9004.pw/" target="_blank">久零爱上视频</a></li>
-<li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.d9sp.xyz/" target="_blank">D9视频</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.caobiao789.com/" target="_blank">我要操婊</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
-<li><a href="http://www.dh445.com/" target="_blank">超碰在线视频</a></li>
-<li><a href="http://www.tianxingseai.top/" target="_blank">甜性涩爱</a></li>
-<li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
 <li><a href="http://www.repianvv.pw/" target="_blank">热片SeX大电影</a></li>
 <li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
 <li><a href="http://www.444ap.com/" target="_blank">日本AV电影</a></li>
@@ -272,7 +257,6 @@
 <li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
 <li><a href="http://www.woailg8.com/" target="_blank">撸管会所</a></li>
 <li><a href="http://lu1919.com/" target="_blank">哥哥干在线</a></li>
-<li><a href="http://www.kedougood.com/" target="_blank">柯兜在线</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.taohua8.ml/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
@@ -286,11 +270,10 @@
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunsegan.com/" target="_blank">春色视频</a></li>
 <li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
-<li><a href="http://www.aisegeav.com/" target="_blank">爱色阁</a></li>
+<li><a href="http://www.qianmeiba.com/" target="_blank">千媚吧</a></li>
 <li><a href="http://caol66.com/" target="_blank">草榴视频</a></li>
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
 <li><a href="http://www.wojiuyaolu.com/" target="_blank">撸撸奶</a></li>
-<li><a href="http://www.mowang.info/" target="_blank">魔王在线</a></li>
 <li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
 <li><a href="http://www.s1shipin.com/" target="_blank">色艺视频</a></li>
 <li><a href="http://www.caoliu6av.com/" target="_blank">草榴6av在线</a></li>
@@ -298,8 +281,6 @@
 <li><a href="http://www.wygav.com/" target="_blank">忘忧阁</a></li>
 <li><a href="http://www.avba.club/" target="_blank">AV吧在线</a></li>
 <li><a href="http://www.remeiav.com/" target="_blank">热妹AV在线</a></li>
-<li><a href="http://www.smmsp.info/" target="_blank">色妹妹视频</a></li>
-<li><a href="http://www.lupian.info/" target="_blank">撸片在线</a></li>
 <li><a href="http://www.dadiaoav.xyz/" target="_blank">大屌AV</a></li>
 <li><a href="http://www.xxoo44.com/" target="_blank">JJAIBB</a></li>
 <li><a href="http://www.xingaigeav.xyz/" target="_blank">性爱阁AV</a></li>
@@ -312,6 +293,9 @@
 <li><a href="http://www.avtb345.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
+<li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
+<li><a href="http://www.adv77.com/" target="_blank">AVHD100</a></li>
+<li><a href="https://avhd101.com/" target="_blank">高清AVHD101</a></li>
 <li><a href="http://www.7mav.net/" target="_blank">7M视频</a></li>
 <li><a href="http://www.5xxx2.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.qqqqmao.com/" target="_blank">东京热</a></li>
@@ -333,7 +317,8 @@
 <li><a href="http://cat3movie.us/" target="_blank">海外三极</a></li>
 <li><a href="http://www.168porn.net/" target="_blank">IAVporn</a></li>
 <li><a href="http://zhs.lxxlx.com/" target="_blank">LXXLX</a></li>
-<li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
+<li><a href="http://www.whichav.net/" target="_blank">WHICHAV</a></li>
+<li><a href="http://www.vid999.com/" target="_blank">vid333</a></li>
 <li><a href="http://xbgirl.com/" target="_blank">XBgirl</a></li>
 <li><a href="https://www.youav.com/" target="_blank">YouAV</a></li>
 <li><a href="http://www.yjizz0.com/" target="_blank">YouJizz</a></li>
@@ -364,12 +349,11 @@
 <li><a href="https://www.avfrog.com/" target="_blank">AVFrog</a></li>
 <li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.pddse.com/" target="_blank">嫖老师AV</a></li>
-<li><a href="http://www.ccxx77.com/" target="_blank">废柴视频网</a></li>
+<li><a href="http://www.qingsege111.com/" target="_blank">青色阁</a></li>
+<li><a href="http://www.fcw7.com/" target="_blank">废柴视频网</a></li>
+<li><a href="http://sifangpian.info/" target="_blank">私房片</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
-<li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
 <li><a href="http://www.jiuseteng23.com/" target="_blank">九涩腾</a></li>
-<li><a href="http://www.kk-av.com/" target="_blank">在线手机视频</a></li>
-<li><a href="https://avhd101.com/" target="_blank">AVHD101</a></li>
 <li><a href="http://www.uukk8822.com/" target="_blank">宅男频道</a></li>
 <li><a href="http://www.megaline.co/Cazn2" target="_blank">91porn</a></li>
 				    </ul>
@@ -414,7 +398,6 @@
 <li><a href="http://www.myxvids.com/" target="_blank">MYXVIDS</a></li>
 <li><a href="http://www.absoluporn.com/" target="_blank">AbsoluPorn</a></li>
 <li><a href="http://pornorio.org/" target="_blank">Pornorio</a></li>
-<li><a href="http://filhadaputa.xxx/" target="_blank">Filme Porno</a></li>
 <li><a href="http://pornfun.com/" target="_blank">PornFun</a></li>
 <li><a href="http://www.e-hdporn.net/" target="_blank">E-HDporn</a></li>
 <li><a href="http://www.epornik.com/" target="_blank">ePornik</a></li>
@@ -428,7 +411,7 @@
 <li><a href="http://www.poimel.org/" target="_blank">poimel</a></li>
 <li><a href="http://www.plashporn.com/" target="_blank">PlashPorn</a></li>
 <li><a href="http://www.teenporntube.xxx/" target="_blank">TeenPornTube</a></li>
-<li><a href="http://datoporn.com/" target="_blank">DatoPorn</a></li>
+<li><a href="http://dato.porn/" target="_blank">DatoPorn</a></li>
 <li><a href="https://www.vporn.com/" target="_blank">vPorn</a></li>
 <li><a href="http://sextop1.net/" target="_blank">SexTop1</a></li>
 <li><a href="http://homepornbay.com/" target="_blank">Homeporn</a></li>
@@ -472,7 +455,7 @@
 <li><a href="http://hdhardporn.com/" target="_blank">HDHardPorn</a></li>
 <li><a href="http://adultdouga-db.com/" target="_blank">無料AV アダルト</a></li>
 <li><a href="http://javmix.tv/" target="_blank">Javmix</a></li>
-<li><a href="http://www.vjav.com/" target="_blank">VJAV</a></li>
+<li><a href="http://www.cntheta.net/" target="_blank">OJAV</a></li>
 <li><a href="http://beejp.net/" target="_blank">BeeJP</a></li>
 <li><a href="http://javdiscovery.com/" target="_blank">JAVDISCOVERY</a></li>
 <li><a href="https://javfinder.com/" target="_blank">JavFinder</a></li>
@@ -492,6 +475,7 @@
 <li><a href="https://www.pornsia.com/" target="_blank">Pornsia</a></li>
 <li><a href="http://www.jmetube.com/" target="_blank">JMETube</a></li>
 <li><a href="http://www.tokyoporn.com/" target="_blank">TokyoPorn</a></li>
+<li><a href="http://oc.notreal.cn/" target="_blank">欧美车</a></li>
 <li><a href="http://www.adult-sex-porn-tv.com/" target="_blank">Adult TV</a></li>
 				    </ul>
 		</div>
@@ -635,16 +619,15 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://www.wndflb.com/" target="_blank">福利吧论坛</a></li>
-<li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://zfuli.wang/?fromuid=1539" target="_blank">找福利网论坛</a></li>
+<li><a href="http://www.51flb.com/" target="_blank">分享福利吧</a></li>
+<li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://www.lusir8.com/" target="_blank">撸涩吧</a></li>
 <li><a href="http://www.lufuliba.com/" target="_blank">撸福利吧</a></li>
-<li><a href="http://fltty.net/" target="_blank">福利天天有</a></li>
 <li><a href="http://www.haofukua.com/" target="_blank">好浮夸</a></li>
 <li><a href="http://meirifuli.me/" target="_blank">每日福利</a></li>
 <li><a href="https://www.sijihuisuo.club/" target="_blank">司机会所</a></li>
 <li><a href="http://www.puahome.com/" target="_blank">坏男孩</a></li>
-<li><a href="http://lieqizhijia.com/" target="_blank">猎奇之家</a></li>
 <li><a href="http://www.bocaishequ.cn/?u=4509" target="_blank">菠菜社区</a></li>
 <li><a href="https://103.3.60.42/" target="_blank">月兑会</a></li>
 <li><a href="http://bbs.jjwxc.net/" target="_blank">晋江文学城</a></li>
@@ -884,8 +867,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="https://btso.pw/search" target="_blank">BTSOW种子</a></li>
-<li><a href="http://sexvid.cc/" target="_blank">AV种子</a></li>
-<li><a href="http://btkitty.bid/" target="_blank">BT KITTY</a></li>
+<li><a href="http://www.torrentx.cc/" target="_blank">AV种子</a></li>
 <li><a href="https://www.nyaa.se/" target="_blank">Nyaa</a></li>
 <li><a href="http://btdigg.pw/" target="_blank">BTDigg</a></li>
 <li><a href="https://tpb.dashitz.com/" target="_blank">TPB</a></li>
@@ -914,6 +896,7 @@
 <li><a href="http://www.2016bt.cc/" target="_blank">2016BT核工厂</a></li>
 <li><a href="http://torrent.sex169.pw/" target="_blank">SEX169 種子站</a></li>
 <li><a href="http://www.ttbt3.com/" target="_blank">图图资源</a></li>
+<li><a href="http://bt2.bt87.cc/" target="_blank">种子磁力搜索</a></li>
 <li><a href="http://bt.gg/" target="_blank">短磁链</a></li>
 <li><a href="https://btdb.in/" target="_blank">BTDB</a></li>
 <li><a href="http://clshe.com/" target="_blank">磁力社</a></li>
@@ -923,7 +906,6 @@
 <li><a href="http://www.yunbosou.cc/" target="_blank">云播搜</a></li>
 <li><a href="http://www.btcherry.info/" target="_blank">BT樱桃</a></li>
 <li><a href="http://www.btkuaisou.cc/" target="_blank">BT快搜</a></li>
-<li><a href="http://bt2.bt87.cc/" target="_blank">BT搜搜</a></li>
 <li><a href="http://www.javbus84.com/" target="_blank">JAVBUS</a></li>
 <li><a href="http://bt588.cc/" target="_blank">BT588</a></li>
 <li><a href="http://www.kx1024.com/" target="_blank">BT1280</a></li>
