--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.org/" target="_blank">奇色社区</a></li>
 <li><a href="http://www.ppzy8.top/" target="_blank">啪啪资源吧</a></li>
+<li><a href="http://www.jsmrke.com/?fromuid=99648" target="_blank">江山美人社区</a></li>
 <li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
@@ -178,7 +179,10 @@
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
 <li><a href="http://www.semmdh.info/" target="_blank">色妹妹导航</a></li>
 <li><a href="http://lvjiabai1.info/" target="_blank">绿桃K导航</a></li>
-<li><a href="http://www.pigutu.pw/" target="_blank">第一福利导航</a></li>
+<li><a href="http://www.meiniang.info/" target="_blank">媚娘福利导航</a></li>
+<li><a href="http://www.1024fuli.xyz/" target="_blank">1024福利导航</a></li>
+<li><a href="http://www.chaxuedh.pw/" target="_blank">插穴福利导航</a></li>
+<li><a href="http://www.caoporn6.info/" target="_blank">超碰福利导航</a></li>
 <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
 <li><a href="http://www.chdaohang.com/" target="_blank">痴汉导航</a></li>
@@ -213,9 +217,15 @@
 <li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
+<li><a href="http://www.thkav.info/" target="_blank">桃花开</a></li>
+<li><a href="http://www.linjiajiejie.top/" target="_blank">邻家姐姐</a></li>
+<li><a href="http://www.boduoyejieyi.pw/" target="_blank">波多野结衣</a></li>
+<li><a href="http://www.lugege.top/" target="_blank">撸哥哥影院</a></li>
+<li><a href="http://www.wagaga.co/" target="_blank">哇嘎嘎</a></li>
 <li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
 <li><a href="http://www.51mmm.info/" target="_blank">51妹妹在线</a></li>
 <li><a href="http://www.slzxav.com/" target="_blank">色郎在线</a></li>
+<li><a href="http://www.tianxingseai.top/" target="_blank">甜性涩爱</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
@@ -300,10 +310,9 @@
 <li><a href="http://www.5xxx2.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.qqqqmao.com/" target="_blank">东京热</a></li>
 <li><a href="http://999ss99.com/" target="_blank">久久热视频</a></li>
+<li><a href="http://www.niuniure003.com/" target="_blank">牛牛热</a></li>
 <li><a href="http://qyl7.com/" target="_blank">青娱乐视频</a></li>
 <li><a href="http://www.aotu15.com/" target="_blank">凹凸视频</a></li>
-<li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
-<li><a href="http://www.qingjunlu3.com/" target="_blank">请君撸</a></li>
 <li><a href="http://www.aiqqc.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.jimohd.com/" target="_blank">寂寞草</a></li>
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
@@ -325,7 +334,9 @@
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
-<li><a href="http://www.niuniure003.com/" target="_blank">牛牛热</a></li>
+<li><a href="http://lusir.site/" target="_blank">鲁SIR</a></li>
+<li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
+<li><a href="http://www.qingjunlu3.com/" target="_blank">请君撸</a></li>
 <li><a href="http://www.lupian50.com/" target="_blank">撸片迷在线</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
 <li><a href="http://www.999mm.us/" target="_blank">夜猫</a></li>
@@ -620,7 +631,8 @@
 		<ul>
 <li><a href="http://www.wndflb.com/" target="_blank">福利吧论坛</a></li>
 <li><a href="http://zfuli.wang/?fromuid=1539" target="_blank">找福利网论坛</a></li>
-<li><a href="http://www.51flb.com/" target="_blank">分享福利吧</a></li>
+<li><a href="http://www.51flb.com/?fromuid=13637" target="_blank">分享福利吧</a></li>
+<li><a href="http://www.336yingyuan.top/" target="_blank">336影院</a></li>
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://www.lusir8.com/" target="_blank">撸涩吧</a></li>
 <li><a href="http://www.lufuliba.com/" target="_blank">撸福利吧</a></li>
