--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 <li><a href="http://174.127.195.198/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://girl1280.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
-<li><a href="http://www.gaohaolu.com/" target="_blank">高好撸</a></li>
+<li><a href="http://www.gulige.com/" target="_blank">高好撸</a></li>
 <li><a href="http://www.lu6vip.info/" target="_blank">撸6VIP论坛</a></li>
-<li><a href="http://xinghao.mobi/?fromuid=18" target="_blank">性好论坛</a></li>
+<li><a href="http://xinghao.world/?fromuid=18" target="_blank">性好论坛</a></li>
 <li><a href="http://www.xiu88.info/" target="_blank">秀秀资源网</a></li>
 <li><a href="http://xisezi.tech/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
@@ -97,7 +97,7 @@
 <li><a href="http://theporndude.com/" target="_blank">The Porn Dude</a></li>
 <li><a href="http://namethatporn.com/" target="_blank">NameThatPorn</a></li>
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
-<li><a href="http://c2.1024mx.net/pw/" target="_blank">1024核工厂</a></li>
+<li><a href="http://1024.97luhi.club/pw/" target="_blank">1024核工厂</a></li>
 <li><a href="http://www.51youba.cc/?fromuid=1577" target="_blank">老司机论坛</a></li>
 <li><a href="http://redditlist.com/nsfw" target="_blank">redditlist</a></li>
 <li><a href="http://45.32.51.95/?fromuid=2571826" target="_blank">捷克论坛</a></li>
@@ -159,7 +159,7 @@
 <li><a href="http://fulidh.gq/" target="_blank">柠檬导航</a></li> 
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
-<li><a href="http://www.lansedh.ml/" target="_blank">蓝色导航3.0</a></li>
+<li><a href="http://www.lansedh.tk/" target="_blank">蓝色导航3.0</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
 <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
 <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
