--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.giit.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
-<li><a href="http://that.gq/" target="_blank">精品福利</a></li>
+<li><a href="http://wear.ml/" target="_blank">精品福利</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://fl47.net/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
@@ -59,7 +59,7 @@
 <li><a href="http://174.127.195.198/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://girl1280.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
-<li><a href="http://www.gulige.com/" target="_blank">高好撸</a></li>
+<li><a href="http://www.gulige.xyz/" target="_blank">古丽阁</a></li>
 <li><a href="http://www.lu6vip.info/" target="_blank">撸6VIP论坛</a></li>
 <li><a href="http://xinghao.world/?fromuid=18" target="_blank">性好论坛</a></li>
 <li><a href="http://www.xiu88.info/" target="_blank">秀秀资源网</a></li>
@@ -69,7 +69,7 @@
 <li><a href="http://www.ppzy8.top/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://www.jsmrke.com/?fromuid=99648" target="_blank">江山美人社区</a></li>
 <li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
-<li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
+<li><a href="http://mf15.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://50.7.103.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
@@ -105,7 +105,6 @@
 <li><a href="http://www.myforum.com.hk/discuz/?fromuid=854827" target="_blank">My Forum</a></li>
 <li><a href="http://www.lsj1080.cc/" target="_blank">MYHD1080</a></li>
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
-<li><a href="http://bbs.gogo.la/" target="_blank">高高啦討論區</a></li>
 <li><a href="https://fastzone.org/?fromuid=99373" target="_blank">無限討論區</a></li>
 <li><a href="http://bbs.sex169.pw/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
 <li><a href="http://www.mimibid.com/" target="_blank">咪咪爱</a></li>
@@ -114,7 +113,7 @@
 <li><a href="http://204.152.220.36/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
 <li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
 <li><a href="http://www.xmq03.com/" target="_blank">西门庆</a></li>
-<li><a href="http://www.jingjinglu2.com/" target="_blank">静静撸</a></li>
+<li><a href="http://www.jingjinglu.com/" target="_blank">静静撸</a></li>
 <li><a href="http://www.2016td.com/" target="_blank">2016TD</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
 <li><a href="http://www.740547610.com/" target="_blank">宅男福利</a></li>
@@ -131,13 +130,13 @@
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://www.ttlang.xyz/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
-<li><a href="http://www.yxj259.com/?fromuid=416640" target="_blank">亿性家</a></li>
+<li><a href="http://www.yixingjiabbs.com/?fromuid=416640" target="_blank">亿性家</a></li>
 <li><a href="http://www.xiaav.la/" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://ilbeya12.com/" target="_blank">ilbeya5</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.net/" target="_blank">三涩论坛</a></li>
-<li><a href="http://taohuabbs.net/?fromuid=70941" target="_blank">桃花族</a></li>
+<li><a href="http://taohuabbs.cc/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://cl.8qb.xyz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://cl.5ug.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://cl.u6a.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
@@ -218,14 +217,10 @@
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.thkav.info/" target="_blank">桃花开</a></li>
-<li><a href="http://www.linjiajiejie.top/" target="_blank">邻家姐姐</a></li>
-<li><a href="http://www.boduoyejieyi.pw/" target="_blank">波多野结衣</a></li>
-<li><a href="http://www.lugege.top/" target="_blank">撸哥哥影院</a></li>
 <li><a href="http://www.wagaga.co/" target="_blank">哇嘎嘎</a></li>
 <li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
 <li><a href="http://www.51mmm.info/" target="_blank">51妹妹在线</a></li>
 <li><a href="http://www.slzxav.com/" target="_blank">色郎在线</a></li>
-<li><a href="http://www.tianxingseai.top/" target="_blank">甜性涩爱</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
@@ -238,7 +233,6 @@
 <li><a href="http://www.94lua.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.jjavs.xyz/" target="_blank">鸡鸡在线</a></li>
 <li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
-<li><a href="http://www.yeyeluav.info/" target="_blank">夜夜撸视频</a></li>
 <li><a href="http://www.4599.ink/" target="_blank">久久视频</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
@@ -251,8 +245,6 @@
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.caobiao789.com/" target="_blank">我要操婊</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
-<li><a href="http://www.repianvv.pw/" target="_blank">热片SeX大电影</a></li>
-<li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
 <li><a href="http://www.444ap.com/" target="_blank">日本AV电影</a></li>
 <li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
 <li><a href="http://www.porn5.club/" target="_blank">Porn5视频</a></li>
@@ -263,14 +255,12 @@
 <li><a href="http://jiajia6.bid/" target="_blank">佳佳视频</a></li>
 <li><a href="http://www.smporn.xyz/" target="_blank">神魔在线</a></li>
 <li><a href="http://sesexia.co/" target="_blank">超快色色下</a></li>
-<li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
 <li><a href="http://www.woailg8.com/" target="_blank">撸管会所</a></li>
 <li><a href="http://lu1919.com/" target="_blank">哥哥干在线</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.taohua8.ml/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
-<li><a href="http://www.mmsao.club/" target="_blank">妹妹骚</a></li>
 <li><a href="http://www.luse501.com/" target="_blank">撸撸色视频</a></li>
 <li><a href="http://www.d8gege.com/" target="_blank">d8gege</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
@@ -285,13 +275,7 @@
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
 <li><a href="http://www.wojiuyaolu.com/" target="_blank">撸撸奶</a></li>
 <li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
-<li><a href="http://www.s1shipin.com/" target="_blank">色艺视频</a></li>
-<li><a href="http://www.caoliu6av.com/" target="_blank">草榴6av在线</a></li>
-<li><a href="http://www.hhl501.com/" target="_blank">狠狠撸在线</a></li>
-<li><a href="http://www.wygav.com/" target="_blank">忘忧阁</a></li>
 <li><a href="http://www.avba.club/" target="_blank">AV吧在线</a></li>
-<li><a href="http://www.remeiav.com/" target="_blank">热妹AV在线</a></li>
-<li><a href="http://www.dadiaoav.xyz/" target="_blank">大屌AV</a></li>
 <li><a href="http://www.xxoo44.com/" target="_blank">JJAIBB</a></li>
 <li><a href="http://www.xingaigeav.xyz/" target="_blank">性爱阁AV</a></li>
 <li><a href="http://www.haohaoluw.com/" target="_blank">好好撸网</a></li>
@@ -299,11 +283,10 @@
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
-<li><a href="http://hhs02.com/" target="_blank">花和尚</a></li>
+<li><a href="http://av888av.com/" target="_blank">AV啪啪</a></li>
 <li><a href="http://www.avtb345.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
-<li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.adv77.com/" target="_blank">AVHD100</a></li>
 <li><a href="https://avhd101.com/" target="_blank">高清AVHD101</a></li>
 <li><a href="http://www.7mav.net/" target="_blank">7M视频</a></li>
@@ -312,7 +295,7 @@
 <li><a href="http://999ss99.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.niuniure003.com/" target="_blank">牛牛热</a></li>
 <li><a href="http://qyl7.com/" target="_blank">青娱乐视频</a></li>
-<li><a href="http://www.aotu15.com/" target="_blank">凹凸视频</a></li>
+<li><a href="http://www.aotu14.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.aiqqc.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.jimohd.com/" target="_blank">寂寞草</a></li>
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
@@ -327,11 +310,13 @@
 <li><a href="http://www.168porn.net/" target="_blank">IAVporn</a></li>
 <li><a href="http://zhs.lxxlx.com/" target="_blank">LXXLX</a></li>
 <li><a href="http://www.whichav.net/" target="_blank">WHICHAV</a></li>
-<li><a href="http://www.vid999.com/" target="_blank">vid333</a></li>
+<li><a href="http://jinniumovie.be/a/" target="_blank">FC2视频</a></li>
+<li><a href="http://www.33vid.com/" target="_blank">PLAY视频</a></li>
 <li><a href="http://xbgirl.com/" target="_blank">XBgirl</a></li>
 <li><a href="https://www.youav.com/" target="_blank">YouAV</a></li>
-<li><a href="http://www.yjizz0.com/" target="_blank">YouJizz</a></li>
+<li><a href="http://www.yjizz1.com/" target="_blank">YouJizz</a></li>
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
+<li><a href="http://www.56avs.us/" target="_blank">桃花岛</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="http://lusir.site/" target="_blank">鲁SIR</a></li>
@@ -635,7 +620,6 @@
 <li><a href="http://www.336yingyuan.top/" target="_blank">336影院</a></li>
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://www.lusir8.com/" target="_blank">撸涩吧</a></li>
-<li><a href="http://www.lufuliba.com/" target="_blank">撸福利吧</a></li>
 <li><a href="http://www.haofukua.com/" target="_blank">好浮夸</a></li>
 <li><a href="http://meirifuli.me/" target="_blank">每日福利</a></li>
 <li><a href="https://www.sijihuisuo.club/" target="_blank">司机会所</a></li>
