--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <li><a href="http://www.slzxav.com/" target="_blank">色郎在线</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
-<li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
+<li><a href="http://email.qingcaodizhi.at.gmail.com.q2c.space/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
 <li><a href="http://go69hx.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://email.v2dizhi.at.gmail.com.vv9.space/" target="_blank">V2视频</a></li>
@@ -225,6 +225,7 @@
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
 <li><a href="http://sae801.xyz/" target="_blank">sae8</a></li>
 <li><a href="http://www.heixiu123.com/" target="_blank">嘿咻123</a></li>
+<li><a href="http://www.dy9.pw/" target="_blank">女优世界</a></li>
 <li><a href="http://www.3446.pw/" target="_blank">爱上色视频</a></li>
 <li><a href="http://www.9004.pw/" target="_blank">久零爱上视频</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
@@ -282,7 +283,8 @@
 <li><a href="http://www.vod47.com/" target="_blank">VOD视频</a></li>
 <li><a href="https://www.195sihu.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.58kvkv.com/" target="_blank">37pao</a></li>
-<li><a href="http://caoporn.pink/" target="_blank">CaoPorn</a></li>
+<li><a href="http://67sz.com/" target="_blank">67射站</a></li>
+<li><a href="http://101.caomoo.com/" target="_blank">CaoPorn</a></li>
 <li><a href="http://www.helloavgirls.com/" target="_blank">HelloAVGirls</a></li>
 <li><a href="http://cat3movie.us/" target="_blank">海外三极</a></li>
 <li><a href="http://www.damose.com/" target="_blank">IAVporn</a></li>
@@ -861,12 +863,11 @@
 		<strong><a name="/17/">在线工具</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://360xixi.com/" target="_blank">清洗种子</a></li>
 <li><a href="https://www.betterso.com/" target="_blank">善用搜索</a></li>
 <li><a href="http://www.similarsitesearch.com/cn/" target="_blank">相似搜索</a></li>
 <li><a href="http://chrome-extension-downloader.com/" target="_blank">下载crx</a></li>
+<li><a href="http://360xixi.com/" target="_blank">清洗种子</a></li>
 <li><a href="https://btso.pw/convert/magnet" target="_blank">BTSOW</a></li>
-<li><a href="http://www.jandown.com/" target="_blank">种子上传</a></li>
 <li><a href="https://www.yinxiang.com/?from=evernote" target="_blank">印象笔记</a></li>
 <li><a href="http://goo.gl/" target="_blank">Google短网址</a></li>
 <li><a href="http://dwz.cn/" target="_blank">百度短网址</a></li>
@@ -880,6 +881,14 @@
 <li><a href="http://pan.baidu.com/" target="_blank">百度云盘</a></li>
 <li><a href="http://www.115.com/" target="_blank">115网盘</a></li>
 <li><a href="http://yunpan.360.cn/" target="_blank">360云盘</a></li>
+<li><a href="http://www.biliworld.com/" target="_blank">哔哩网盘搜索</a></li>
+<li><a href="http://www.flvcd.com/" target="_blank">视频地址解析</a></li>
+<li><a href="http://www.antdvd.cn/" target="_blank">VIP视频解析网</a></li>
+<li><a href="http://www.weibovideo.com/" target="_blank">微博视频下载</a></li>
+<li><a href="http://en.savefrom.net/" target="_blank">Youtube下载</a></li>
+<li><a href="http://freeget.co/" target="_blank">91视频下载</a></li>
+<li><a href="http://c.fr.to/" target="_blank">绿色小导航</a></li>
+<li><a href="http://dizhi.skyrock.com/" target="_blank">地址发布</a></li>
 <li><a href="http://dns.aizhan.com/" target="_blank">IP反查域名</a></li>
 				    </ul>
 		</div>
