--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77620.net/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://174.127.195.196/bbs/index.php" target="_blank">色中色</a></li>
-<li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
+<li><a href="http://38.103.161.182/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://1280yy.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.lu6vip.info/" target="_blank">撸6VIP论坛</a></li>
 <li><a href="http://xinghao.world/?fromuid=18" target="_blank">性好论坛</a></li>
-<li><a href="http://xisezi.tech/?fromuid=80" target="_blank">Xisezi精品</a></li>
+<li><a href="http://xisezi.xyz/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.org/" target="_blank">奇色社区</a></li>
 <li><a href="http://www.ppzy8.top/" target="_blank">啪啪资源吧</a></li>
