--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<ul>
 <li><a href="http://cl.giit.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://wear.ml/" target="_blank">精品福利</a></li>
-<li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
+<li><a href="http://papa118.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://fl47.net/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77620.net/bbs/" target="_blank">Xiao77</a></li>
@@ -222,7 +222,7 @@
 <li><a href="http://www.avlua.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
 <li><a href="http://www.4599.ink/" target="_blank">久久视频</a></li>
-<li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
+<li><a href="http://laoshiji22.xyz/" target="_blank">天天爱视频</a></li>
 <li><a href="http://sae801.xyz/" target="_blank">sae8</a></li>
 <li><a href="http://www.heixiu123.com/" target="_blank">嘿咻123</a></li>
 <li><a href="http://www.dy9.pw/" target="_blank">女优世界</a></li>
