--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
 <li><a href="http://papa118.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://fl47.net/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
-<li><a href="http://x77620.net/bbs/" target="_blank">Xiao77</a></li>
+<li><a href="http://x77218.com/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://1280yy.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://174.127.195.196/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://38.103.161.160/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://xinghao.world/?fromuid=18" target="_blank">性好论坛</a></li>
 <li><a href="http://xisezi.xyz/?fromuid=80" target="_blank">Xisezi精品</a></li>
-<li><a href="http://www.lu6vip.info/" target="_blank">撸6VIP论坛</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.org/" target="_blank">奇色社区</a></li>
 <li><a href="http://www.ppzy8.top/" target="_blank">啪啪资源吧</a></li>
@@ -103,7 +102,7 @@
 <li><a href="http://www.mimipri.com/" target="_blank">咪咪爱</a></li>
 <li><a href="http://www.ykt6.com/" target="_blank">迎客堂</a></li>
 <li><a href="http://dio66.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
-<li><a href="http://204.152.220.36/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
+<li><a href="http://204.152.220.33/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
 <li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
 <li><a href="http://www.xmq03.com/" target="_blank">西门庆</a></li>
 <li><a href="http://www.jingjinglu.com/" target="_blank">静静撸</a></li>
@@ -123,7 +122,7 @@
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://www.ttlang.xyz/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
-<li><a href="http://www.yixingjiabbs.com/?fromuid=416640" target="_blank">亿性家</a></li>
+<li><a href="http://yixingjia123.com/?fromuid=416640" target="_blank">亿性家</a></li>
 <li><a href="http://www.xiaav.la/" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://ilbeya12.com/" target="_blank">ilbeya5</a></li>
@@ -151,25 +150,23 @@
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
 <li><a href="http://fulidh.gq/" target="_blank">柠檬导航</a></li> 
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
-<li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
 <li><a href="http://www.lansedh.tk/" target="_blank">蓝色导航3.0</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
 <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
 <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
 <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
-<li><a href="http://1253.cf/" target="_blank">A天堂导航</a></li>
 <li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
+<li><a href="http://www.semmdh.info/" target="_blank">色妹妹导航</a></li>
 <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
 <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
 <li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
-<li><a href="http://74fuli.org/" target="_blank">骑士福利导航</a></li>
+<li><a href="http://74fuli.xyz/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://kanse.ml/" target="_blank">辣椒导航</a></li>
 <li><a href="http://www.beegooddh.com/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
-<li><a href="http://www.semmdh.info/" target="_blank">色妹妹导航</a></li>
 <li><a href="http://lvjiabai1.info/" target="_blank">绿桃K导航</a></li>
 <li><a href="http://www.meiniang.info/" target="_blank">媚娘福利导航</a></li>
 <li><a href="http://www.1024fuli.xyz/" target="_blank">1024福利导航</a></li>
@@ -190,7 +187,7 @@
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
 <li><a href="http://www.1djb.xyz/" target="_blank">福利射导航</a></li>
-<li><a href="http://www.cjkdl.xyz/" target="_blank">苍井空导航</a></li>
+<li><a href="http://www.baidu8.website/" target="_blank">苍井空导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
 		</div>
@@ -201,7 +198,7 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.bxzx99.info/" target="_blank">caoliu视频</a></li>
+<li><a href="http://www.bxzx99.info/" target="_blank">百性在线</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.msh.one/" target="_blank">陌上花</a></li>
 <li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
@@ -212,11 +209,12 @@
 <li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
 <li><a href="http://www.51mmm.info/" target="_blank">51妹妹在线</a></li>
 <li><a href="http://www.slzxav.com/" target="_blank">色郎在线</a></li>
+<li><a href="http://www.saojj.xyz/" target="_blank">骚姐姐</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://email.qingcaodizhi.at.gmail.com.q2c.space/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
-<li><a href="http://go69hx.com/" target="_blank">红杏视频</a></li>
+<li><a href="http://hxplayer.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://email.v2dizhi.at.gmail.com.vv9.space/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://www.renyu888.com/" target="_blank">人鱼爸爸</a></li>
@@ -245,16 +243,16 @@
 <li><a href="http://www.smporn.xyz/" target="_blank">神魔在线</a></li>
 <li><a href="http://sesexia.co/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.woailg8.com/" target="_blank">撸管会所</a></li>
-<li><a href="http://lu1919.com/" target="_blank">哥哥干在线</a></li>
+<li><a href="http://www.lu1212.com/" target="_blank">哥哥干在线</a></li>
 <li><a href="http://www.taohua8.ml/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.d8gege.com/" target="_blank">d8gege</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://benselulu.com/" target="_blank">本色视频</a></li>
-<li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
-<li><a href="http://www.chunsegan.com/" target="_blank">春色视频</a></li>
-<li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
+<li><a href="http://yeyeaisp.com/" target="_blank">夜色视频</a></li>
+<li><a href="http://www.chunseporn.com/" target="_blank">春色视频</a></li>
+<li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
 <li><a href="http://www.qianjiaoba.com/" target="_blank">千娇吧</a></li>
 <li><a href="http://www.qianmeiba.com/" target="_blank">千媚吧</a></li>
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
@@ -475,8 +473,7 @@
 <li><a href="http://www.ltz5.info/?fromuid=273955" target="_blank">恋臀者</a></li>
 <li><a href="http://www.assdream.com/" target="_blank">Ass Dream</a></li>
 <li><a href="http://www.abigass.com/" target="_blank">ABigAss</a></li>
-<li><a href="http://www.siwaluntan.com/?fromuid=564142" target="_blank">丝袜论坛</a></li>
-<li><a href="http://www.sizuvip.com/?fromuid=29341" target="_blank">丝足vip</a></li>
+<li><a href="http://www.sizu66.com/?fromuid=29341" target="_blank">丝足vip</a></li>
 <li><a href="http://www.meigui98.cc/?fromuid=161579" target="_blank">玫瑰酒吧</a></li>
 <li><a href="http://huaban.com/boards/16607428/" target="_blank">爱莲说</a></li>
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
@@ -485,6 +482,7 @@
 <li><a href="http://www.trannytube.name/" target="_blank">Tranny Tube</a></li>
 <li><a href="http://bdsmland.org/" target="_blank">Bdsmland</a></li>
 <li><a href="http://bodyfluids-jav.com/" target="_blank">Body Fluids JAV</a></li>
+<li><a href="http://www.dirtyshack.com/" target="_blank">DirtyShack</a></li>
 <li><a href="http://www.oklesbians.com/" target="_blank">OK LesBians</a></li>
 <li><a href="http://www.thelesbianporn.com/" target="_blank">Lesbian Porn</a></li>
 <li><a href="http://www.ladyboyweb.com/" target="_blank">Ladyboyweb</a></li>
@@ -537,7 +535,7 @@
 		<ul>
 <li><a href="http://ywds.me/s/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://lsjxingxi.com/" target="_blank">老司机性息</a></li>
-<li><a href="http://www.cvk3.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
+<li><a href="http://www.nwa8.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
 <li><a href="http://204.152.220.30/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.weipaipapa.com/" target="_blank">微拍啪啪</a></li>
@@ -547,9 +545,9 @@
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
 <li><a href="http://www.xgmeinv.com/" target="_blank">西瓜美女影视</a></li>
 <li><a href="http://www.win981.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
-<li><a href="http://www.xy69.info/?fromuid=678142" target="_blank">逍遥游</a></li>
+<li><a href="http://204.152.220.23/?fromuid=678142" target="_blank">逍遥游</a></li>
 <li><a href="http://www.cqhx.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
-<li><a href="http://192.161.172.132/?u=465979" target="_blank">买春堂</a></li>
+<li><a href="http://192.161.172.137/?u=465979" target="_blank">买春堂</a></li>
 <li><a href="http://www.myhhg.com/?u=430488" target="_blank">红河谷</a></li>
 <li><a href="http://www.2ye.tv/" target="_blank">恋恋影视</a></li>
 <li><a href="https://chaturbate.com/" target="_blank">Chaturbate</a></li>
@@ -571,7 +569,7 @@
 <li><a href="https://www.myfreecams.com/" target="_blank">MyFreeCams</a></li>
 <li><a href="http://fc2live.us/adult/" target="_blank">FC2 Live</a></li>
 <li><a href="http://wowchat.net/" target="_blank">wowchat</a></li>
-<li><a href="http://www.mmshowmm.net/" target="_blank">第一坊</a></li>
+<li><a href="http://www.themmtvshow.net/" target="_blank">第一坊</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -581,12 +579,11 @@
 		<strong><a name="/10/">国内福利</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.51flb.com/?fromuid=13637" target="_blank">分享福利吧</a></li>
-<li><a href="http://www.tanghenre.com/" target="_blank">汤很热</a></li>
 <li><a href="http://www.wndflb.com/" target="_blank">福利吧论坛</a></li>
 <li><a href="http://zfuli.wang/?fromuid=1539" target="_blank">找福利网论坛</a></li>
 <li><a href="http://www.336yingyuan.top/" target="_blank">336影院</a></li>
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
+<li><a href="http://www.tanghenre.com/" target="_blank">汤很热</a></li>
 <li><a href="http://www.lusir8.com/" target="_blank">撸涩吧</a></li>
 <li><a href="http://www.haofukua.com/" target="_blank">好浮夸</a></li>
 <li><a href="http://meirifuli.me/" target="_blank">每日福利</a></li>
@@ -844,7 +841,7 @@
 <li><a href="http://www.tokyotosho.info/" target="_blank">Tokyo Toshokan</a></li>
 <li><a href="http://www.2016bt.cc/" target="_blank">2016BT核工厂</a></li>
 <li><a href="http://torrent.sex169.pw/" target="_blank">SEX169 種子站</a></li>
-<li><a href="http://www.ttbt3.com/" target="_blank">图图资源</a></li>
+<li><a href="http://www.ttbt7.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt2.bt87.cc/" target="_blank">种子磁力搜索</a></li>
 <li><a href="http://bt.gg/" target="_blank">短磁链</a></li>
 <li><a href="https://btdb.in/" target="_blank">BTDB</a></li>
